@@ -18,6 +18,7 @@
 13. Make 'show track number' in queue a config option of material, and not from
     main LMS settings.
 14. Add 'show track number' for now playing.
+15. Add context menu to now-platying image with item to show full size image.
 
 0.3.1
 -----
